package taxi;

public interface Validatable {
    boolean validate();
}
